# digit_recognizer

./: .gitignore  README.md  digit_recognizer_augmentation.ipynb  digit_recognizer_baseline.ipynb  digit_recognizer_polar.ipynb  pyproject.toml
